Bug - Resolved Delete button hidden beneath other component on small screen

--- a/src/components/ContactDetails/ContactDetails.css
+++ b/src/components/ContactDetails/ContactDetails.css
@@ -26,4 +26,5 @@
     position: relative;
     top: 5%;
     left: 80%;
+    z-index: 10;
 }
